MDEV-6781: bug with query cache when using views

The data base lenth passed to invalidator fixed