sql/sql_cache.cc
@@ -3280,7 +3280,7 @@ Query_cache::register_tables_from_list(THD *thd, TABLE_LIST *tables_used,
         There are not callback function for for VIEWs
       */
       if (!insert_table(key_length, key, (*block_table),
-                        tables_used->view_db.length + 1,
+                        tables_used->view_db.length,
                         HA_CACHE_TBL_NONTRANSACT, 0, 0, TRUE))
         DBUG_RETURN(0);
       /*
